# pexpect-mcp

./: pyproject.toml
.github/workflows/: test.yml
src/pexpect_mcp/: server.py
tests/: __init__.py  test_interactive.py
