[project]
name = "pexpect-mcp"
version = "0.1.0"
description = "MCP server for remote pexpect session control"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "mcp>=1.13.0",
    "pexpect>=4.9.0;sys_platform!='win32'",
    "wexpect>=4.0.0;sys_platform=='win32'",
]

[project.scripts]
pexpect-mcp = "pexpect_mcp.server:main"
